--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_bloc: ^8.0.1
   dio: ^4.0.6
+  lazy_load_scrollview: ^1.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
